--- a/css.css
+++ b/css.css
@@ -130,6 +130,9 @@ nav {
 .links li a {
     padding: 12px 10px;
 }
+.links li a:hover{
+    color: rgb(233, 237, 243);
+}
 .resume-btn {
     display: block;
     box-sizing: inherit;
@@ -147,7 +150,9 @@ nav {
     padding: 0.75rem 1rem;
     text-decoration: none;
 }
-
+.resume-btn a:hover{
+    color:rgb(241, 245, 250);
+}
 .burger{
 	display: none;
 	cursor: pointer;
@@ -159,6 +164,37 @@ nav {
 	background-color: cyan;
 	margin: 5px; 
 	transition: all 0.3s ease;
+}
+
+.Section-heading {
+    position: relative;
+    display: flex;
+    color: rgb(204, 214, 246);
+    align-items: center;
+    width: 100%;
+    font-size: 30px;
+    margin: 10px 0px 40px;
+}
+.Section-heading::before{
+    counter-increment: section 1;
+    content: "0" counter(section) ".";
+    margin-right: 10px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-weight: normal;
+    color: rgb(100, 255, 218);
+    font-size: 30px;
+    margin-top: 6px;
+    box-sizing: inherit;
+    position: relative;
+}
+.Section-heading::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 300px;
+    background-color: rgb(48, 60, 85);
+    position: relative;
+    margin-left: 20px;
 }
 /* Main content-1 
 #################################################################################
@@ -205,7 +241,7 @@ nav {
 
 /* About section */
 
-.column-2 {
+.column-4 {
     width: 100%;
     display: flex;
     line-height: 1.3;
@@ -214,37 +250,7 @@ nav {
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.column-2 h1 {
-    position: relative;
-    display: flex;
-    color: rgb(204, 214, 246);
-    align-items: center;
-    width: 100%;
-    white-space: nowrap;
-    font-size: 30px;
-    margin: 10px 0px 40px;
-}
-.column-2 h1::before {
-    counter-increment: section 1;
-    content: "0" counter(section) ".";
-    margin-right: 10px;
-    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
-    font-weight: normal;
-    color: rgb(100, 255, 218);
-    font-size: 30px;
-    margin-top: 6px;
-    box-sizing: inherit;
-    position: relative;
-}
-.column-2 h1::after {
-    content: "";
-    display: block;
-    height: 1px;
-    width: 300px;
-    background-color: rgb(48, 60, 85);
-    position: relative;
-    margin-left: 20px;
-}
+
 .about-content {
     display: flex;
     justify-content: space-between;
@@ -325,46 +331,15 @@ nav {
 /* ################################################################## */
 
 
-.column-3 {
+/* .column-3 {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+} */
 
-.column-3 .cert-heading {
-    position: relative;
-    display: flex;
-    color: rgb(204, 214, 246);
-    align-items: center;
-    width: 100%;
-    white-space: nowrap;
-    font-size: 30px;
-    margin: 10px 0px 40px;
-}
-.column-3 .cert-heading::before{
-    counter-increment: section 1;
-    content: "0" counter(section) ".";
-    margin-right: 10px;
-    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
-    font-weight: normal;
-    color: rgb(100, 255, 218);
-    font-size: 30px;
-    margin-top: 6px;
-    box-sizing: inherit;
-    position: relative;
-}
-.column-3 .cert-heading::after {
-    content: "";
-    display: block;
-    height: 1px;
-    width: 300px;
-    background-color: rgb(48, 60, 85);
-    position: relative;
-    margin-left: 20px;
-}
 .certificates-box {
     width: 100%;
     float: left;
@@ -381,7 +356,7 @@ nav {
 }
 .box:hover{
     opacity: 1;
-    transform: scale(1.05);
+    transform: scale(1);
 }
 .box-1 {
     background: url(./img/python.png);
@@ -434,45 +409,15 @@ nav {
 }
 /* ######################################################################################### */
 
-.column-4 {
+/* .column-4 {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+} */
 
-.column-4 .projects-heading {
-    position: relative;
-    display: flex;
-    color: rgb(204, 214, 246);
-    align-items: center;
-    width: 100%;
-    font-size: 30px;
-    margin: 10px 0px 40px;
-}
-.column-4 .projects-heading::before{
-    counter-increment: section 1;
-    content: "0" counter(section) ".";
-    margin-right: 10px;
-    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
-    font-weight: normal;
-    color: rgb(100, 255, 218);
-    font-size: 30px;
-    margin-top: 6px;
-    box-sizing: inherit;
-    position: relative;
-}
-.column-4 .projects-heading::after {
-    content: "";
-    display: block;
-    height: 1px;
-    width: 300px;
-    background-color: rgb(48, 60, 85);
-    position: relative;
-    margin-left: 20px;
-}
 .project-box {
     display: flex;
 }
@@ -480,23 +425,26 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
     justify-content: space-between;
 }
 .project-box .box:hover > h1{
     transform: translateY(0);
+    overflow: hidden;
     opacity: 1;
 }
 .project-box .box:hover > a{
     transform: translateY(0);
+    overflow: hidden;
     opacity: 1;
 }
 .project-box .box h1{
     margin: 0;
-    background-color: cyan;
+    background-color: #29B6F6;
     width: 100%;
     color: black;
     font-weight: 200;
-    border-radius: 10px 10px 0 0;
+    border-radius: 5px 5px 0 0;
     text-align: center;
     font-size: 20px;
     padding: 5px 0 5px 0;
@@ -505,12 +453,12 @@ nav {
     transition: all 0.25s ease-out;
 }
 .project-box .box a {
-    background-color: cyan;
+    background-color: #29B6F6;
     display: block;
     width: 100%;
     opacity: 0;
     color: black;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 5px 5px;
     text-align: center;
     padding: 5px 0 5px 0;
     transform: translateY(25px);
@@ -526,6 +474,17 @@ nav {
     background-size: cover;
     background-position: center;
 }
+
+/* ############################################################################# */
+
+/* contact */
+
+ul {
+    list-style-type: none;
+    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
+    font-size: 80%;
+}
+
 /* ############################################################################# */
 .left-line {
     width: 40px;
