--- a/css.css
+++ b/css.css
@@ -13,6 +13,10 @@ body {
     font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
 
+::selection{
+    background-color: #1e3752;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -235,7 +239,38 @@ nav {
     font-size: 1rem;
     text-decoration: none;
     color: whitesmoke;
+    transition: all 0.5s;
+
 }
+
+.get-in-touch:hover{
+    animation: neon1 1s ease-in-out infinite 
+    alternate;
+}
+
+@keyframes neon1 {
+    from {
+      text-shadow: 0 0 10px #fff,
+                 0 0 20px  #fff,
+                 0 0 30px  #fff,
+                 0 0 40px  #228DFF,
+                 0 0 70px  #228DFF,
+                 0 0 80px  #228DFF,
+                 0 0 100px #228DFF,
+                 0 0 150px #228DFF;
+    }
+    to {
+      text-shadow: 0 0 5px #fff,
+                 0 0 10px #fff,
+                 0 0 15px #fff,
+                 0 0 20px #228DFF,
+                 0 0 35px #228DFF,
+                 0 0 40px #228DFF,
+                 0 0 50px #228DFF,
+                 0 0 75px #228DFF;
+    }
+  }
+  
 
 /* ################################################################################# */
 
@@ -353,60 +388,60 @@ nav {
     opacity: 0.8;
     margin: 10px;
     box-shadow: black 0 10px 20px -10px;
+    position: relative;
 }
-.box:hover{
-    opacity: 1;
-    transform: scale(1);
-}
+
 .box-1 {
     background: url(./img/python.png);
     background-size: cover;
     background-position: center;
+    overflow: hidden;
+    transition: transform .8s ease;
 }
 .box-2{
     background: url(./img/Java.png);
     background-size: cover;
     background-position: center;
+    overflow: hidden;
+    transition: transform .8s ease;
 }
 .inner {
+    position: absolute;
+    background-color: rgba(255,0,0,.7);
     width: 100%;
     height: 100%;
-    /* padding: 0px 10px 0px 10px; */
-    background-color: rgb(154, 191, 247);
-    border-radius: 10px;
-    opacity: 0.8;
-    clip-path: circle(5% at 90% 15%);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    transition: all .5s ease-in-out;
+    top: 0;
+    transform: scale(1.3);
+    opacity: 0;
+    transition: transform .4s ease 0s;
 }
-.inner h1 {
-    margin: 0;
-    color: white;
-    font-size: 30px;
-    display: block;
-    width: 50%;
-    margin: 10px;
+.box:hover{
+    opacity: 1;
 }
-.inner p {
-    color:white;
-    margin: 10px;
+
+.inner h3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    font-size: 3em;
+    color: #fff;
+    margin-top: 0px;
+    font-family: Sans-serif;
 }
-.inner span {
-    margin-left: 313px;
-    margin-top: -50px;
-    font-weight: 600;
-    color: white;
+
+.box-1:hover .inner{
+    opacity: 1;
+    transform: scale(1);
 }
-.inner:hover {
-    background-color: rgb(10, 25, 47);
-    clip-path: circle(75%);
+
+.box-2:hover .inner{
+    opacity: 1;
+    overflow: hidden;
+    transform: scale(1);
 }
-.inner:hover span {
-    display: none;
-}
+
 /* ######################################################################################### */
 
 /* .column-4 {
@@ -478,12 +513,27 @@ nav {
 /* ############################################################################# */
 
 /* contact */
-
-ul {
-    list-style-type: none;
-    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
-    font-size: 80%;
+.contact-grid{
+    display: grid;
+    grid-template-columns: 30px auto;
+    grid-template-rows: auto;
 }
+
+.contact-grid ul {
+    list-style-type: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 80%;
+    display: grid;
+    row-gap: 20px;
+}
+
+.contact-icons i{
+    font-size: 18px;
+    color: transparent;
+   -webkit-text-stroke-width: .5px;
+   -webkit-text-stroke-color: rgb(204, 214, 246);
+}
+
 
 /* ############################################################################# */
 .left-line {
@@ -572,7 +622,8 @@ ul {
     color: whitesmoke;
     font-size: 12px; 
     text-align: center;
-      }
+    font-family: 'Montserrat', sans-serif;
+}
 .footer span{
     color: red;
 }
