--- a/css.css
+++ b/css.css
@@ -101,7 +101,7 @@ nav {
 .logo a h1 {
     font-size: 1.5rem;
     margin: 0;
-    font-family: 'Open sans',Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 .nav-links {
 	display: flex;
@@ -174,6 +174,7 @@ nav {
     position: relative;
     display: flex;
     color: rgb(204, 214, 246);
+    font-family: 'Montserrat', sans-serif;
     align-items: center;
     width: 100%;
     font-size: 30px;
@@ -183,11 +184,11 @@ nav {
     counter-increment: section 1;
     content: "0" counter(section) ".";
     margin-right: 10px;
-    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     color: rgb(100, 255, 218);
     font-size: 30px;
-    margin-top: 6px;
+    margin-top: 1px;
     box-sizing: inherit;
     position: relative;
 }
@@ -383,7 +384,7 @@ nav {
     width: 350px;
     height: 250px;
     float: left;
-    border-radius: 10px;
+    border-radius: 3px;
     transition: all 0.5s ease;
     opacity: 0.8;
     margin: 10px;
@@ -453,61 +454,41 @@ nav {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 } */
 
-.project-box {
-    display: flex;
+.project-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    column-gap: 20px;
+    row-gap: 20px;
 }
-.project-box .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.master-project-box {
     overflow: hidden;
-    justify-content: space-between;
+    position: relative;
+    width: 350px;
+    height: 230px;
+    border-radius: 3px;
 }
-.project-box .box:hover > h1{
-    transform: translateY(0);
-    overflow: hidden;
-    opacity: 1;
+
+.master-project-box .inner a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    font-size: 3em;
+    color: rgb(10, 7, 7);
+    margin-top: 0px;
+    font-family: Sans-serif;
 }
-.project-box .box:hover > a{
-    transform: translateY(0);
-    overflow: hidden;
-    opacity: 1;
-}
-.project-box .box h1{
-    margin: 0;
-    background-color: #29B6F6;
-    width: 100%;
-    color: black;
-    font-weight: 200;
-    border-radius: 5px 5px 0 0;
-    text-align: center;
-    font-size: 20px;
-    padding: 5px 0 5px 0;
-    opacity: 0;
-    transform: translateY(-30px);
-    transition: all 0.25s ease-out;
-}
-.project-box .box a {
-    background-color: #29B6F6;
-    display: block;
-    width: 100%;
-    opacity: 0;
-    color: black;
-    border-radius: 0px 0px 5px 5px;
-    text-align: center;
-    padding: 5px 0 5px 0;
-    transform: translateY(25px);
-    transition: all 0.25s ease-out;
-}
-.project-box .box-1 {
-    background: url(./img/Page-1.png);
+.master-project-box img{
     background-size: cover;
     background-position: center;
+    width: 100%;
+    height: 100%;
 }
-.project-box .box-2{
-    background: url(./img/Page-2.png);
-    background-size: cover;
-    background-position: center;
+.master-project-box:hover .inner{
+    opacity: 1;
+    transform: scale(1);
 }
 
 /* ############################################################################# */
@@ -619,7 +600,6 @@ nav {
 /* ####################################################################################### */
 .footer{
     width: 100%;
-    color: whitesmoke;
     font-size: 12px; 
     text-align: center;
     font-family: 'Montserrat', sans-serif;
