--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,12 @@
+@media (min-width: 769px) and (max-width: 900px){
+    .project-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .master-project-box{
+        max-width: 300px;
+    }
+}
+
 @media screen and (max-width: 768px) {
 	.nav-links{
         position: absolute;
@@ -61,14 +70,16 @@
         justify-content: center;
         align-items: center;
     }
-    .project-box{
+    .project-container{
         width: 85%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
     }
+
 }
 @media screen and (max-width: 600px) {
 	.nav-links{
@@ -149,27 +160,20 @@
     .box {
         width: 100%;
         /* height: 250px; */
-        min-width: 300px;
+        min-width: 320px;
+        max-width: 340px;
         background-color: rgba(10, 25, 47,0.2);
     }
-    .inner{
-        clip-path: none;
-        background-color: rgb(10, 25, 47);
+    
+    .project-container{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 auto;
+        -ms-grid-column-align: center;
     }
-    .inner h1 {
-        color: white;
-    }
-    .inner p{
-        color: white;
-        font-size: 15px;
-    }
-    .inner span {
-        display: none;
-    }
-    .project-box{
-        flex-direction: column;
-        width: 100%;
-        min-width: 300px;
+
+    .master-project-box{
+        min-width: 320px;
+        max-width: 340px;
     }
     .left-line,
     .right-line {
