--- a/css.css
+++ b/css.css
@@ -271,13 +271,11 @@ nav {
                  0 0 75px #228DFF;
     }
   }
-  
-
 /* ################################################################################# */
 
 /* About section */
 
-.column-4 {
+.Common-column {
     width: 100%;
     display: flex;
     line-height: 1.3;
@@ -330,8 +328,8 @@ nav {
 }
 .right {
     width: 35%;
-    max-width: 480px;
-    min-width: 250px;
+    max-width: 360px;
+    min-width: 220px;
 }
 .right a {
     width: 100%;
@@ -342,70 +340,113 @@ nav {
     border: 2px solid cyan;
     width: 100%;
     height: 100%;
-    border-radius: 4px;
+    border-radius: 5px;
     z-index: -1;
     position: absolute;
     display: block;
     left: 15px;
     top: 15px;
+    transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.3s;
 }
 .right a:hover:before {
-    transition: all 0.3s ease-in;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
     transform: translate(-5px,-5px)
 }
 .right img {
     width: 100%;
-    border-radius: 4px;
+    border-radius: 5px;
     min-width: 80%;
     filter: grayscale(100%);
+    transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.3s;
 }
 .right img:hover {
     filter: grayscale(0%);
-    transition: all 0.2s ease-in;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 
 /* ################################################################## */
-
-
-/* .column-3 {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-} */
 
 .certificates-box {
     width: 100%;
     float: left;
 }
-.box{
-    width: 350px;
-    height: 250px;
+.certificates-box .box{
+    width: 260px;
+    height: 200px;
     float: left;
-    border-radius: 3px;
-    transition: all 0.5s ease;
-    opacity: 0.8;
-    margin: 10px;
-    box-shadow: black 0 10px 20px -10px;
+    border-radius: 4px;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+    opacity: 1;
+    margin: 7px;
+    box-shadow: rgba(2,12,27,0.7) 0 10px 20px -10px;
     position: relative;
+    z-index: 5;
+    overflow: hidden;
+    -webkit-transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.3s;
 }
-
-.box-1 {
+.box:after{
+    content: "";
+    position: absolute;
+    background-color: #0a192f;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.2;
+}
+.box:before{
+    content: "";
+    position: absolute;
+    background-color: #64ffda;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.3;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+.box:hover:after{
+    opacity: 0;
+    transition: all cubic-bezier(0.77, 0, 0.175, 1) 0.6s;
+}
+.box:hover:before{
+    opacity: 0;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.4s;
+}
+.box:hover{
+    transform: translateY(-8px);
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.box:nth-child(1) {
+    background: url(./img/Epam.jpg);
+    width: 320px;
+    height: 414px;
+    background-size: cover;
+    background-position: center;
+}
+.box:nth-child(2) {
     background: url(./img/python.png);
     background-size: cover;
     background-position: center;
-    overflow: hidden;
-    transition: transform .8s ease;
 }
-.box-2{
+.box:nth-child(3){
     background: url(./img/Java.png);
     background-size: cover;
     background-position: center;
-    overflow: hidden;
-    transition: transform .8s ease;
 }
+.box:nth-child(4){
+    background: url(./img/1stop.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+.box:nth-child(5){
+    background: url(./img/digital-marketing.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+/*
 .inner {
     position: absolute;
     background-color: rgba(255,0,0,.7);
@@ -416,10 +457,7 @@ nav {
     opacity: 0;
     transition: transform .4s ease 0s;
 }
-.box:hover{
-    opacity: 1;
-}
-
+ 
 .inner h3 {
     position: absolute;
     top: 50%;
@@ -431,7 +469,6 @@ nav {
     margin-top: 0px;
     font-family: Sans-serif;
 }
-
 .box-1:hover .inner{
     opacity: 1;
     transform: scale(1);
@@ -441,7 +478,7 @@ nav {
     opacity: 1;
     overflow: hidden;
     transform: scale(1);
-}
+} */
 
 /* ######################################################################################### */
 
@@ -535,12 +572,13 @@ nav {
     list-style: none;
 }
 .left-line ul li:last-of-type {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .left-line a{
     display: inline-block;
     color: inherit;
     position: relative;
+    font-size: 20px;
     cursor: pointer;
     padding: 10px;
     text-decoration: none;
@@ -580,7 +618,8 @@ nav {
 .right-line a{
     font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
     font-size: 12px;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
+    line-height: 18px;
     writing-mode: vertical-rl;
     margin: 20px auto;
     padding: 10px;
@@ -590,7 +629,7 @@ nav {
     position: relative;
     cursor: pointer;
     text-decoration: none;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
     box-sizing: inherit;
 }
 .right-line a:hover{
