--- a/css.css
+++ b/css.css
@@ -371,8 +371,8 @@ nav {
     float: left;
 }
 .certificates-box .box{
-    width: 260px;
-    height: 200px;
+    width: 340px;
+    height: 240px;
     float: left;
     border-radius: 4px;
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
@@ -422,8 +422,8 @@ nav {
 }
 .box:nth-child(1) {
     background: url(./img/Epam.jpg);
-    width: 320px;
-    height: 414px;
+    width: 340px;
+    height: 494px;
     background-size: cover;
     background-position: center;
 }
@@ -446,6 +446,34 @@ nav {
 }
 .box:nth-child(5){
     background: url(./img/digital-marketing.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+.box:nth-child(6){
+    background: url(./img/java-udemy.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+.box:nth-child(7){
+    background: url(./img/ccna.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+.box:nth-child(8){
+    background: url(./img/cybersecurity.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+}
+.box:nth-child(9){
+    background: url(./img/cisco-python.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-color: white;
