--- a/css.css
+++ b/css.css
@@ -369,12 +369,53 @@ nav {
 .certificates-box {
     width: 100%;
     float: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 510px;
 }
-.certificates-box .box{
+#showElements{
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 10px 25px;
+    background-color: transparent;
+    box-shadow: rgba(2,12,27,0.7) 0 10px 20px -10px;
+    font-size: 13px;
+    border-radius: 5px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    border: 1px solid #64ffda;
+    color: #64ffda;
+    cursor: pointer;
+}
+#showElements:hover{
+    background-color: rgb(18, 39, 71);
+}
+#hideElements{
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 10px 25px;
+    background-color: transparent;
+    color: #64ffda;
+    cursor: pointer;
+    box-shadow: rgba(2,12,27,0.7) 0 10px 20px -10px;
+    font-size: 13px;
+    border-radius: 5px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    display: none;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    border: 1px solid #64ffda;
+}
+#hideElements:hover{
+    background-color: rgb(18, 39, 71);
+}
+.box{
     width: 340px;
     height: 240px;
     float: left;
-    border-radius: 4px;
+    border-radius: 5px;
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
     opacity: 1;
     margin: 7px;
@@ -392,6 +433,7 @@ nav {
     height: 100%;
     top: 0;
     opacity: 0.3;
+    border-radius: 5px;
     transform: translateX(0%);
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
@@ -403,21 +445,25 @@ nav {
     height: 100%;
     top: 0;
     opacity: 0.3;
+    border-radius: 5px;
     transform: translateX(0%);
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
 .box:hover:after{
     opacity: 0;
     transform: translateX(-100%);
+    border-radius: 5px;
     transition: all cubic-bezier(0.77, 0, 0.175, 1) 1s;
 }
 .box:hover:before{
     opacity: 0;
     transform: translateX(-100%);
+    border-radius: 5px;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.8s;
 }
 .box:hover{
     transform: translateY(-8px);
+    border-radius: 5px;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 .box:nth-child(1) {
@@ -479,105 +525,34 @@ nav {
     background-color: white;
     background-position: center;
 }
-/*
-.inner {
-    position: absolute;
-    background-color: rgba(255,0,0,.7);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    transform: scale(1.3);
-    opacity: 0;
-    transition: transform .4s ease 0s;
-}
- 
-.inner h3 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-weight: bold;
-    font-size: 3em;
-    color: #fff;
-    margin-top: 0px;
-    font-family: Sans-serif;
-}
-.box-1:hover .inner{
-    opacity: 1;
-    transform: scale(1);
-}
 
-.box-2:hover .inner{
-    opacity: 1;
-    overflow: hidden;
-    transform: scale(1);
-} */
+/* ############################################################################# */
 
-/* ######################################################################################### */
 
-/* .column-4 {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-} */
-
-.project-container {
-    width: 100%;
-    float: left;
-}
-.master-project-box {
-    width: 340px;
-    height: 200px;
-    float: left;
-    border-radius: 5px;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
-    opacity: 1;
-    margin: 7px;
-    box-shadow: rgba(2,12,27,0.7) 0 10px 20px -10px;
-    position: relative;
-    z-index: 5;
-    overflow: hidden;
-    -webkit-transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.3s;
-}
-
-.master-project-box img{
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-}
-.master-project-box:hover .inner{
-    opacity: 1;
-    transform: scale(1);
-}
 
 /* ############################################################################# */
 
 /* contact */
 .contact-grid{
     display: grid;
-    grid-template-columns: 30px auto;
-    grid-template-rows: auto;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
 }
 
 .contact-grid ul {
     list-style-type: none;
     font-family: 'Montserrat', sans-serif;
-    font-size: 80%;
+    font-size: 1rem;
     display: grid;
     row-gap: 20px;
+    margin: 0 auto;
 }
-
 .contact-icons i{
     font-size: 18px;
     color: transparent;
    -webkit-text-stroke-width: .5px;
    -webkit-text-stroke-color: rgb(204, 214, 246);
 }
-
 
 /* ############################################################################# */
 .left-line {
