--- a/responsive.css
+++ b/responsive.css
@@ -2,38 +2,44 @@
     .master-project-box{
         max-width: 300px;
     }
+    .certificates-box {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-overflow: ellipsis;
+    }
 }
 
 @media screen and (max-width: 768px) {
 	.nav-links{
         position: absolute;
-        height: 100vh;
-        top: 3.7em;
+        height: 280px;
+        top: 55.5px;
+        border-radius: 4px;
         right: 0;
-		background-color: #4673ac; 		/*#1d1b38*/
+		background-color: #1d1b38; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-		width: 50%;
+        align-items: flex-start;
+        flex-wrap: nowrap;
+		width: 240px;
         z-index: 1;
         transform: translateX(100%);
-        transition: 0.3s ease-out;
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
     }
     nav {
         width: 100%;
     }
-    .nav-links .resume-btn {
-        margin-top: 30px;
-    }
     .links {
+        padding: 10px;
         display: flex;
-        width: 100%;
-        height: 60%;
-        padding: 20px;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        align-items: baseline;
+        border-bottom: #2d286e;
+    }
+    .resume-btn{
+        padding: 10px;
     }
 	.links li {
         opacity: 0;       
@@ -66,6 +72,14 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .box{
+        margin-left: 70px;
     }
     .project-container{
         width: 100%;
@@ -76,27 +90,60 @@
         /* flex-wrap: wrap; */
         align-items: center;
     }
-
+}
+@media screen and (max-width: 1012px) {
+    .certificates-box {
+        width: 85%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    }
+    .project-container{
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* flex-wrap: wrap; */
+        align-items: center;
+    }
+    .box{
+        margin-left: 30px;
+    }   
 }
 @media screen and (max-width: 600px) {
 	.nav-links{
         position: absolute;
-        height: 100vh;
-        top: 3.6em;
+        height: 280px;
+        top: 55.5px;
+        border-radius: 4px;
         right: 0;
-		background-color: #4673ac; 		/*#1d1b38*/
+		background-color: #1d1b38; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
-        align-items: center;
-        justify-content:flex-start;
-		width: 50%;
+        align-items: flex-start;
+        flex-wrap: nowrap;
+		width: 240px;
         z-index: 1;
         transform: translateX(100%);
-        transition: 0.3s ease-out;
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
     }
     .links {
-        height: 60%;
-        padding: 20px;
+        padding: 10px;
+        display: flex;
+        align-items: baseline;
+        border-bottom: #2d286e;
+    }
+    .resume-btn{
+        padding: 10px;
+        display: block;
     }
 	.burger {
         display: block;
@@ -146,25 +193,20 @@
         width: 100%;
         animation: 0.4s ease-in;
     }
-    .certificates {
+    .certificates-box {
         width: 100%;
         margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        text-overflow: ellipsis;
     }
     .box {
         width: 100%;
-        /* height: 250px; */
         min-width: 320px;
         max-width: 340px;
         background-color: rgba(10, 25, 47,0.2);
     }
-    .master-project-box{
-        width: 100%;
-        min-width: 320px;
-        max-width: 340px;
+    .contact-grid ul {
+        row-gap: 30px;
+        margin: 0 auto;
     }
     .left-line,
     .right-line {
